--- a/src/try-upgrade/try-upgrade.csproj
+++ b/src/try-upgrade/try-upgrade.csproj
@@ -11,4 +11,8 @@
     <PackageOutputPath>./bin/nupkg</PackageOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
